# Conky-Images-Display

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  NEWS  README  build.sh  cid.pc.in  clean  config.h.cmake.in  config.status  configure  configure.ac  libtool
cid/: README  configure.ac
cid/data/: Makefile.am  cid.conf.in
cid/po/: Makevars
cid/src/: Makefile.am  cid-X-utilities.c  cid-amarok.c  cid-amarok2.c  cid-amazon.c  cid-amazon.h  cid-animation.c  cid-animation.h  cid-applet-canvas.h  cid-asynchrone.c  cid-callbacks.c  cid-callbacks.h  cid-conf-panel-factory.c  cid-config.c  cid-config.h  cid-console-call.c  cid-constantes.h  cid-cover.c  cid-cover.h  cid-dbus.c  cid-dbus.h  cid-dcop.c  cid-dcop.h  cid-draw.c  cid-exaile.c  cid-menu-factory.c  cid-menu-factory.h  cid-messages.c  cid-modules.c  cid-modules.h  cid-mpd.c  cid-mpd.h  cid-panel-callbacks.c  cid-rhythmbox.c  cid-struct.h  cid-utilities.c  cid-utilities.h  cid.c  cid.h  libmpdclient.c
data/: CMakeLists.txt  Makefile.am  Makefile.in  cid.conf.in  cid.desktop
doc/: dox.config.in
plug-ins/: Makefile.am  configure.ac  generate-new-applet.sh
plug-ins/old-template/src/: applet-init.c
plug-ins/template/: Makefile.am  configure.ac
plug-ins/template/po/: Makefile.in.in  Makevars  fr.po
plug-ins/template/src/: Makefile.am  applet-init.c  applet-init.h  applet-struct.h
po/: CMakeLists.txt  Makefile.in  Makefile.in.in  POTFILES.in  fr.gmo  fr.po
src/: CMakeLists.txt  Makefile.am  Makefile.in  cid-X-utilities.c  cid-X-utilities.h  cid-amarok.c  cid-amarok.h  cid-amarok2.c  cid-amarok2.h  cid-amazon.c  cid-amazon.h  cid-animation-thread.c  cid-animation-thread.h  cid-animation.c  cid-animation.h  cid-applet-canvas.h  cid-asynchrone.c  cid-asynchrone.h  cid-callbacks.c  cid-callbacks.h  cid-conf-panel-factory.c  cid-conf-panel-factory.h  cid-config.c  cid-config.h  cid-console-call.c  cid-console-call.h  cid-constantes.h  cid-cover.c  cid-cover.h  cid-datatables.c  cid-datatables.h  cid-dbus.c  cid-dbus.h  cid-dcop.c  cid-dcop.h  cid-draw.c  cid-draw.h  cid-exaile.c  cid-exaile.h  cid-file-utilities.c  (+29 more)
src/backends/: CMakeLists.txt  cid-amarok.c  cid-amarok.h  cid-amarok2.c  cid-exaile.c  cid-exaile.h  cid-mpd.c  cid-rhythmbox.c  cid-rhythmbox.h  libmpdclient.h
src/gui/: CMakeLists.txt  cid-callbacks.c  cid-callbacks.h  cid-gui-callback.c  cid-gui-callback.h  cid-gui-factory.c  cid-gui-factory.h  cid-menu-factory.c  cid-menu-factory.h
src/tools/: CMakeLists.txt  cid-X-utilities.c  cid-X-utilities.h  cid-console-call.c  cid-console-call.h  cid-datatables.c  cid-datatables.h  cid-dbus.c  cid-dbus.h  cid-file-utilities.c  cid-file-utilities.h  cid-md5.c  cid-md5.h  cid-string-utilities.c  cid-string-utilities.h  cid-utilities.c  cid-utilities.h
