SUBDIRS = .

essentialdatadir = $(pkgdatadir)

essentialdata_DATA = \
		animation.png \
		options.png \
		default.svg \
		play-white.png \
		pause-white.png \
		next-white.png \
		prev-white.png \
		play-yellow.png \
		pause-yellow.png \
		next-yellow.png \
		prev-yellow.png \
		play-red.png \
		pause-red.png \
		next-red.png \
		prev-red.png \
		cross.png \
		connect.png \
		disconnect.png \
		cid.conf

EXTRA_DIST = $(essentialdata_DATA) \
	cid
